<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">个人理财</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">用户名</string>
    <string name="playname">name</string>
    <string name="password">密码</string>
    <string name="playpass">pass</string>
    <string name="submit">登录</string>
    <string name="title_activity_pic">PicActivity</string>
    <string name="title_activity_add_outaccount">新增支出</string>
    <string name="title_activity_manage">个人理财管理</string>
    <string name="title_activity_add_inaccount">新增收入</string>
    <string name="title_activity_outaccountinfo">个人支出</string>
    <string name="title_activity_info_manage">理财修改</string>
    <string name="title_activity_inaccountinfo">个人收入</string>
    <string name="title_activity_showinfo">数据管理</string>

</resources>
